Update index.htm - Criando primeira sessão

--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    
+
     <header class="cabec">
         <div class="container">
             <div class="box-4">
@@ -33,6 +33,28 @@
             </div>
         </div>
     </header>
+
+    <!-- FAXADA -->
+    <section class="faxada">
+        <div class="container">
+            <div class="box-6">
+                <h2 class="big-title">Servinco com excelência</h2>
+                <p class="text">
+                    Servimos cada pedido com atenção total aos detalhes, prezando pela qualidade, agilidade e
+                    cordialidade em todas as etapas. Nosso compromisso é oferecer uma experiência acolhedora e saborosa,
+                    unindo tradição, cuidado e dedicação para garantir que cada cliente se sinta bem recebido e
+                    satisfeito.
+                </p>
+                <p class="caixa">
+                    Venha nos conhecer e tomar aquele café conosco!
+                </p>
+            </div>
+
+            <div class="box-6 img"></div>
+            <img src="./img/topo.jpg" alt="Bancada com varios pratos de doces feito em uma padaria" title="Bancada com varios pratos de doces feito em uma padaria">
+
+        </div>
+    </section>
 
 </body>
 
