Update index.htm - Criando sessão de produtos

--- a/index.htm
+++ b/index.htm
@@ -32,13 +32,14 @@
                 </nav>
             </div>
         </div>
+        <!-- PRODUTOS -->
     </header>
 
     <!-- FAXADA -->
     <section class="faxada">
         <div class="container">
             <div class="box-6">
-                <h2 class="big-title">Servinco com excelência</h2>
+                <h2 class="big-title">Servindo com excelência</h2>
                 <p class="text">
                     Servimos cada pedido com atenção total aos detalhes, prezando pela qualidade, agilidade e
                     cordialidade em todas as etapas. Nosso compromisso é oferecer uma experiência acolhedora e saborosa,
@@ -50,9 +51,27 @@
                 </p>
             </div>
 
-            <div class="box-6 img"></div>
-            <img src="./img/topo.jpg" alt="Bancada com varios pratos de doces feito em uma padaria" title="Bancada com varios pratos de doces feito em uma padaria">
+            <div class="box-6 img">
+                <img src="./img/topo.jpg" alt="Bancada com varios pratos de doces feito em uma padaria"
+                    title="Bancada com varios pratos de doces feito em uma padaria">
+            </div>
 
+        </div>
+    </section>
+    <!-- PRODUTOS -->
+    <section class="produtos">
+        <div class="container">
+            <div class="box-12">
+                <h1 class="big-title">Venha experimentar nossas deliciosas receitas.</h1>
+            </div>
+            <div class="box-3"> <img src="./img/salgado.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/hamburguer.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/frito.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/pizza.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/bolo.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/doce.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/calda.jpg" alt=""> </div>
+            <div class="box-3"> <img src="./img/sonho.jpg" alt=""> </div>
         </div>
     </section>
 
