--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+        <!-- cdn -->
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- importando css -->
     <link rel="stylesheet" href="./css/site.css">
 
@@ -134,6 +136,12 @@
 
             </div>
             <div class="box-6">
+                <ul>
+                    <li><i class="fa-brands fa-square-whatsapp big-title"></i> 11 99999 9999</li>
+                    <li><i class="fa-solid fa-envelope"></i> iago@gmail.com.br</li>
+                    <li><i class="fa-brands fa-square-instagram"></i> @iagooficial</li>
+                    <li><i class="fa-solid fa-location-dot"></i>Rua Iago, 9999</li>
+                </ul>
 
             </div>
         </div>
