--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             </div>
             <div class="box-6">
                 <ul>
-                    <li><i class="fa-brands fa-square-whatsapp big-title"></i> 11 99999 9999</li>
+                    <li><i class="fa-brands fa-square-whatsapp whats"></i> 11 99999 9999</li>
                     <li><i class="fa-solid fa-envelope"></i> iago@gmail.com.br</li>
                     <li><i class="fa-brands fa-square-instagram"></i> @iagooficial</li>
                     <li><i class="fa-solid fa-location-dot"></i>Rua Iago, 9999</li>
