--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="box-8">
                 <nav>
                     <ul>
-                        <li><a href="">Inicio</a></li>
-                        <li><a href="">Produto</a></li>
-                        <li><a href="">Sobre nós</a></li>
-                        <li><a href="">Contato</a></li>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#produto">Produto</a></li>
+                        <li><a href="#sobre">Sobre nós</a></li>
+                        <li><a href="#contato">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -38,7 +38,7 @@
     </header>
 
     <!-- FAXADA -->
-    <section class="faxada">
+    <section class="faxada" id="inicio">
         <div class="container">
             <div class="box-6">
                 <h2 class="big-title">Servindo com excelência</h2>
@@ -61,7 +61,7 @@
         </div>
     </section>
     <!-- PRODUTOS -->
-    <section class="produtos">
+    <section class="produtos" id="produto">
         <div class="container">
             <div class="box-12">
                 <h1 class="big-title">Venha experimentar nossas deliciosas receitas.</h1>
@@ -77,7 +77,7 @@
         </div>
     </section>
     <!-- SOBRE NOS -->
-    <section class="sobre">
+    <section class="sobre" id="sobre">
         <div class="container">
             <div class="box-12">
                 <h2 class="big-title">Sobre nós</h2>
@@ -112,7 +112,7 @@
         </div>
     </section>
     <!-- CONTATO -->
-    <section class="contato">
+    <section class="contato" id="contato">
         <div class="container">
             <div class="box-12">
                 <h2 class="big-title">Entre em contato conosco</h2>
@@ -146,6 +146,14 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="box-12">
+                <p> &copy; 2025 - Todos os direitos reservados </p>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
